# cloud-run-llms

./: README.md  setup.Dockerfile
langchain-local-llms/: .env  Dockerfile  Makefile  main.py  pyproject.toml
ollama/: download-models.sh
